[package]
name = "rusty"
version = "0.1.0"
authors = ["MissaDavid <mei.chohee@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Repo for the 'Let's get Rusty' preso"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Add external crates here
[dependencies]
#bevy = "0.5.0"